refactoring be
